2008-08-27  Stephen Deasey <sdeasey@users.sf.net>

	* include/nsconfig.h.in: Remove autogenerated file.

	* nsd/tcltime.c: Use simple pointer copying inplace of memcpy.

	* configure.in:
	* include/nsthread.h: Use autoconf's AC_SYS_LARGEFILE macro to provide
	large file support. With this system, the off_t and size_t
	types etc. are defined to be 64bit wide on 32bit machines, so the
	normal calls such as stat() work for large files, resulting in
	cleaner code.
	* nsd/nsd.h:
	* nsd/log.c:
	* nsd/fastpath.c: Remove various #ifdef'ery.

	* configure.in:
	* nsd/nsd.h:
	* nsd/fastpath.c: Remove calls to Tcl's VFS routines within the
	fastpath, as it adds a lot of noise. For starkit users there is
	a new nsvfs module which provides pure Tcl VFS access to the file
	system for the fastpath, and wrappers for ns_return and
	ns_respond. This is actually more flexible: you can wrapped access
	to /admin*, for bundled starkit files, and native access to
	/fast*, for user added content.
	* nsd/rollfile.c:
	* nsd/tclmisc.c: Replace calls to the NsFast* wrappers with
	straight Tcl_* calls.

	* nsd/nsd.h:
	* nsd/Makefile:
	* nsd/fastpath.c:
	* nsd/range.c: Cleanup and move byte-range code to own file.
	Fix bug where numerous ranges in a request caused a dstring to be
	reallocated, invalidating the pointers we had into it.
	* nsd/connio.c: The ConnSend routines now no longer responsible
	for setting the length header. The old way meant that the passed
	length dictated the length of the whole file you were to send, but
	that's exactly what the Ns_ConnReturnF* routines do. Now we can
	send pieces of files in multiple goes. Also, remove the call to
	the writer thread from this low-level routine.
	Don't switch to chunking mode when streaming is requested and the
	mime-type is multipart/byteranges: they are self delimited and we
	may need to send them in muliple chunks.
	* nsd/driver.c: Need to set the length in the writer explicitly
	now that the low-level Ns_ConnSendFile does not.