@@ -1,3 +1,9 @@
+2008-08-27  Vlad Seryakov <seryakov@users.sf.net>
+
+	* nsd/tclmisc.c: Revert to native system call. This is fast version of
+        stat without exception for quick checks. It returns 1 or 0.
+	
+
 2008-08-27  Stephen Deasey <sdeasey@users.sf.net>
 
 	* include/nsconfig.h.in: Remove autogenerated file.
